Fix overflow issue

--- a/src/styles/boss.css
+++ b/src/styles/boss.css
@@ -26,7 +26,7 @@ audio:not([controls]) {
 html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  color: #221C26;
+  color: #221c26;
   overflow-x: hidden;
 }
 a {
@@ -66,7 +66,7 @@ pre {
   word-wrap: break-word;
 }
 q {
-  quotes: 2 1C 2 1D 2 18 2 19;
+  quotes: 2 1c 2 1d 2 18 2 19;
 }
 small {
   font-size: 80%;
@@ -108,9 +108,9 @@ input {
   line-height: normal;
 }
 button,
-html input[type=button],
-input[type=reset],
-input[type=submit] {
+html input[type='button'],
+input[type='reset'],
+input[type='submit'] {
   -webkit-appearance: button;
   cursor: pointer;
 }
@@ -118,19 +118,19 @@ button[disabled],
 input[disabled] {
   cursor: default;
 }
-input[type=checkbox],
-input[type=radio] {
+input[type='checkbox'],
+input[type='radio'] {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
 }
-input[type=search] {
+input[type='search'] {
   -webkit-appearance: textfield;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 textarea {
@@ -155,7 +155,7 @@ input::-moz-focus-inner {
   visibility: hidden;
   display: block;
   font-size: 0;
-  content: " ";
+  content: ' ';
   clear: both;
   height: 0;
 }
@@ -199,22 +199,22 @@ ul {
 }
 
 .arrow #arrow-head {
-	transform-origin: right;
-	transform: scale(1, 1);
-	transition: all 200ms ease;
+  transform-origin: right;
+  transform: scale(1, 1);
+  transition: all 200ms ease;
 }
 .arrow:hover #arrow-head {
-	transform: scale(1, 0.9);
-	transition: all 200ms ease;
+  transform: scale(1, 0.9);
+  transition: all 200ms ease;
 }
 .arrow #arrow-body {
-	transform-origin: right;
-	transform: scale(0.9, 1);
-	transition: all 200ms ease;
+  transform-origin: right;
+  transform: scale(0.9, 1);
+  transition: all 200ms ease;
 }
 .arrow:hover #arrow-body {
-	transform: scale(1, 1);
-	transition: all 200ms ease;
+  transform: scale(1, 1);
+  transition: all 200ms ease;
 }
 
 .up-button {
@@ -240,7 +240,7 @@ ul {
   height: 4px;
   width: 100%;
   justify-self: right;
-  background:white;
+  background: white;
   border-radius: 9px;
   opacity: 1;
   left: 0;
@@ -248,17 +248,18 @@ ul {
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
 }
 
 #nav-icon3 span:nth-child(1) {
   top: 0px;
 }
 
-#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
+#nav-icon3 span:nth-child(2),
+#nav-icon3 span:nth-child(3) {
   top: 9px;
 }
 
@@ -303,8 +304,8 @@ ul {
   align-content: center;
 }
 .first-button {
- grid-row: 2 / span 1;
- margin-top: 15px;
+  grid-row: 2 / span 1;
+  margin-top: 15px;
 }
 
 .left-button.flex-button {
@@ -314,7 +315,7 @@ ul {
 }
 
 .first-button > button {
- margin-top: 0;
+  margin-top: 0;
 }
 
 .right-button {
@@ -323,7 +324,7 @@ ul {
   grid-row: 3 / span 1;
   align-self: center;
   justify-self: start;
-  align-content: center
+  align-content: center;
 }
 
 .home-button {
@@ -332,7 +333,7 @@ ul {
   grid-row: 3 / span 1;
   align-self: center;
   justify-self: end;
-  align-content: center
+  align-content: center;
 }
 
 .right {
@@ -343,7 +344,6 @@ ul {
   border-radius: 4px;
 }
 
-
 .custom-link {
   color: black;
   text-decoration: underline;
@@ -353,7 +353,8 @@ ul {
   color: hsl(276, 70%, 59%);
 }
 
-input:focus, textarea:focus {
+input:focus,
+textarea:focus {
   outline: none;
 }
 
@@ -414,7 +415,9 @@ input:focus, textarea:focus {
 }
 
 @media (max-width: 900px) {
-  .left-button, .right-button, .home-button {
+  .left-button,
+  .right-button,
+  .home-button {
     grid-column: 2 / 4;
     grid-row: 2 / span 1;
     justify-self: center;
@@ -427,5 +430,11 @@ input:focus, textarea:focus {
   .contact-for-more {
     margin: 0 auto;
     width: 100%;
+  }
+  body {
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+
+    max-width: 100vw;
   }
 }
